# mahi-experiment

./: .gitignore  CMakeLists.txt  README.md
data/load_data/: S1.csv  S2.csv  S3.csv  S4.csv  S5.csv  test_data.csv
data/save_data/: S3data_2020-11-02_17.10.18.csv
include/: ExperimentHelper.hpp
src/: ExperimentHelper.cpp  experiment.cpp
test/: CMakeLists.txt  test_collecting_data.cpp  test_command_line_args.cpp  test_console_input.cpp  test_loading_data.cpp  test_randomization.cpp  test_saving_data.cpp  test_timing_elements.cpp
